<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity"
    >
    
<!--    HEADER-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/hello"
            android:textColor="@color/colorWhite"

            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="15dp"
            android:text="@string/username"
            android:textColor="@color/colorWhite"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/hello"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="15dp"
            android:contentDescription="menu"
            android:src="@drawable/ic_baseline_menu_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/hello"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/white_rectangle_background"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/hello"
            app:layout_constraintTop_toBottomOf="@id/hello">


            <EditText
                android:id="@+id/edtSearch"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/edt_search"
                android:paddingLeft="15dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/search_icon_background"
                android:contentDescription="search_icon"
                android:padding="6dp"
                android:src="@drawable/ic_baseline_search_24"
                app:tint="@color/colorPrimary"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    CONTENT-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="190dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <GridLayout
                    android:id="@+id/grid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:rowCount="2"
                    android:columnCount="2"
                    >

                    <androidx.cardview.widget.CardView
                        android:id="@+id/goals"
                        app:cardCornerRadius="10dp"
                        app:layout_row="0"
                        app:layout_column="0">

                        <LinearLayout
                            style="@style/option"
                            app:layout_constraintDimensionRatio="1"

                            >

                            <ImageView
                                style="@style/option_image"
                                android:src="@drawable/goals">

                            </ImageView>

                            <TextView
                                style="@style/option_text"
                                android:text="@string/goals">

                            </TextView>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/finance"
                        android:layout_marginStart="20dp"
                        app:cardCornerRadius="10dp"
                        app:layout_row="0"
                        app:layout_column="1"
                        >

                        <LinearLayout
                            style="@style/option"
                            app:layout_constraintDimensionRatio="1">

                            <ImageView
                                style="@style/option_image"
                                android:src="@drawable/finance">

                            </ImageView>

                            <TextView
                                style="@style/option_text"
                                android:text="@string/finance">

                            </TextView>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/health"
                        app:cardCornerRadius="10dp"
                        app:layout_row="1"
                        app:layout_column="0"
                        app:layout_constraintTop_toBottomOf="@id/goals"
                        android:layout_marginTop="20dp"

                        >

                        <LinearLayout
                            style="@style/option"
                            app:layout_constraintDimensionRatio="1"

                            >

                            <ImageView
                                style="@style/option_image"
                                android:src="@drawable/health">

                            </ImageView>

                            <TextView
                                style="@style/option_text"
                                android:text="@string/health">

                            </TextView>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/comfort"
                        app:cardCornerRadius="10dp"
                        app:layout_row="1"
                        app:layout_column="0"
                        app:layout_constraintTop_toBottomOf="@id/finance"
                        android:layout_marginTop="20dp"
                        app:layout_constraintLeft_toRightOf="@id/health"
                        android:layout_marginLeft="20dp"

                        >

                        <LinearLayout
                            style="@style/option"
                            app:layout_constraintDimensionRatio="1"

                            >

                            <ImageView
                                style="@style/option_image"
                                android:src="@drawable/comfort">

                            </ImageView>

                            <TextView
                                style="@style/option_text"
                                android:text="@string/comfort">

                            </TextView>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                </GridLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/trending_background"
                    android:layout_marginTop="20dp"
                    android:padding="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/grid">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:background="@drawable/white_rectangle_background"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/trending"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginRight="0dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:gravity="center_vertical"/>

                    <ImageView
                        android:id="@+id/heart"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/ic_outline_favorite_border_24"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@+id/heart"
                        android:ellipsize="end"
                        android:maxLines="3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/lorem_ipsum"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorWhite"
        app:itemIconSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom_navigation" />




</androidx.constraintlayout.widget.ConstraintLayout>